# termclock

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  taplo.toml
src/: app.rs  cli.rs  clock.rs  color.rs  main.rs  time.rs
